# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  minishell
include/: minishell.h  types.h  vector.h
libft/: Makefile  libft.h
libft/includes/: ft_printf_utils.h  libft_int.h
libft/srcs/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_math_1.c  ft_math_2.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_split_str.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strfjoin.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  (+10 more)
srcs/: buildin_fu.c  env.c  executor.c  exit_err.c  expander.c  is_comand.c  lessless.c  lexer.c  main.c  parser.c  path.c  pipeline_init.c  prints.c  signal.c  split_semicolon.c  t_pipeline.c  tests.c  utils.c  utils_tab.c  vec.c  vec_int.c  vecl.c  vector.c
srcs/buildins/: buildin_cd.c  buildin_dispatcher.c  buildin_echo.c  buildin_env.c  buildin_exit.c  buildin_export.c  buildin_export_print.c  buildin_pwd.c  buildin_unset.c  is_buildin.c
srcs/env/: env_get_value.c  env_key_chr.c  str_get_key.c
srcs/executor/: executor.c  executor_minis.c
srcs/expander/: expand_env.c  expand_path.c
srcs/free/: free_execves.c  free_pipeline.c  free_ret.c  free_split.c
srcs/parser/: add_greate.c  add_greategreate.c  add_less.c  add_lessless.c  check_err_redirect.c  count_args.c  count_pipes.c  lessless.c  parser.c  piper.c  set_args.c
srcs/utils/: count_tab_rows.c  get_args.c  get_execve.c  signal_handlers.c  split_semicolon.c  t_execve_init.c
srcs/vec/: vec_add.c  vec_deep_free.c  vec_free.c  vec_grow.c  vec_init.c
srcs/vec_env/: str_key.c  vec_env_add.c  vec_env_ch.c  vec_env_init.c  vec_env_join.c  vec_env_rem.c
srcs/vec_int/: vec_int_add.c  vec_int_free.c  vec_int_grow.c  vec_int_init.c
srcs/vec_lex/: vec_lex_add.c  vec_lex_free.c  vec_lex_grow.c  vec_lex_init.c
